# TelegramForwarder

./: .env_sample  .gitignore  LICENSE  README.md  config_sample.yml  pyproject.toml  shell.nix
src/telegram_forwarder/: __init__.py  console.py  discord.py  formatter.py  main.py  telegram.py  utils.py
